# boomerang-blitz

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.h  LoadedObj.h  Model.h  Renderer.h  Scene.h  SceneObject.h  Window.h  collisions.h  matrices.h
src/: Camera.cpp  LoadedObj.cpp  Model.cpp  Renderer.cpp  Scene.cpp  SceneObject.cpp  Window.cpp  collisions.cpp  matrices.cpp
src/shaders/: shader_fragment.glsl  shader_vertex.glsl
